--- a/src/app/features/post-login/inspection-plan-list/component/inspection-plan-inspector-list/inspection-plan-inspector-list.component.html
+++ b/src/app/features/post-login/inspection-plan-list/component/inspection-plan-inspector-list/inspection-plan-inspector-list.component.html
@@ -6,39 +6,58 @@
     <div class="list-inspector-header px-3 text-center">
       <h5 class="mx-auto">Danh sách thanh tra</h5>
       <div class="total">
-          <span class="text-secondary mx-auto"
-          >Tổng số: {{ selectedInspectors?.length || 0}}</span
-          >
+        <span class="text-secondary mx-auto">Tổng số: {{ selectedInspectors?.length || 0}}</span>
       </div>
     </div>
 
     <div class="card mt-2 flex-fill">
-      <div class="overflow-auto  d-flex flex-column justify-content-between h-100">
-        <ng-container *ngFor="let item of selectedInspectors">
-          <div *ngIf="selectedInspectors" class="mb-2">
-            <div class="scrollview-item d-flex p-3 h-full">
+      <div class="scrollable-container overflow-auto d-flex flex-column justify-content-between h-100">
+        <ng-container *ngFor="let item of selectedInspectors; let i = index">
+          <div *ngIf="selectedInspectors" class="mt-1" [class.my-2]="toggleChange">
+            <div class="scrollview-item d-flex px-2 h-full" [class.py-2]="toggleChange">
               <div
                 class="scrollview-item-icon d-flex justify-content-center align-items-center"
               >
-                <img src="../../../../../../assets/img/user_icon.svg" alt="" />
+                <img src="assets/img/user_icon.svg" alt=""/>
               </div>
               <div class="scrollview-item-content ms-3">
-                <span class="font-weight-bold">{{ item.user?.fullName || item.accountName}}</span>
+                <span class="font-weight-bold">{{ item?.user?.fullName}}</span>
                 <br/>
                 <span class="fw-light">
-                    {{ item.roles?.length > 0 ? item.roles[0].roleName : item.roleName[0]}} -
-                  {{ item.school?.schoolName || item.schoolName}}
+                    {{item.roles[0]?.roleName}} -
+                  {{ item.school?.schoolName}}
                   </span>
               </div>
+              <div class="scroll-view-chief">
+
+              </div>
+            </div>
+            <div class="w-100 text-center" *ngIf="deleteButtonVisibility">
+              <button type="button" class="delete-button w-100" (click)="onDeleteInspector(i)">
+                <i class="bi bi-trash-fill"></i>
+              </button>
             </div>
           </div>
         </ng-container>
       </div>
     </div>
-    <div class="w-100 d-flex justify-content-center mt-2">
-      <button type="button" pButton class="create-inspector" *ngIf="listEditable"
-              (click)="changeInspectorVisible()">Chỉnh sửa ban KTNB
-      </button>
+    <div class="w-100 d-flex justify-content-center mt-2" *ngIf="listEditable">
+      <div *ngIf="toggleChange">
+        <button type="button" pButton class="create-inspector"
+                (click)="changeToggleStatus()">Chỉnh sửa ban KTNB
+        </button>
+      </div>
+      <div *ngIf="!toggleChange" class="w-100 px-1 d-flex flex-row justify-content-between align-items-center">
+        <button type="button" pButton class="create-inspector px-4" (click)="onReset()">
+          Hủy
+        </button>
+        <button type="button" pButton class="create-inspector px-5" (click)="changeInspectorVisible()">
+          <i class="bi bi-plus-lg"></i>
+        </button>
+        <button type="button" pButton class="create-inspector px-4" (click)="onSave()">
+          Lưu
+        </button>
+      </div>
     </div>
   </div>
 </ng-template>
